--- a/tsconfig.json
+++ b/tsconfig.json
@@ -22,6 +22,16 @@
       "@/*": ["./*"]
     }
   },
-  "include": ["next-env.d.ts", "**/*.ts", "**/*.tsx", ".next/types/**/*.ts"],
+  "include": [
+    "next-env.d.ts",
+    "**/*.ts",
+    "**/*.tsx",
+    "**/*.js",
+    ".next/types/**/*.ts"
+    /*  "components/loginModal/index.jsx",
+    "components/header/index.js",
+    "components/header/navBar/index.jsx",
+    "components/items/card.js" */
+  ],
   "exclude": ["node_modules"]
 }
