--- a/package.json
+++ b/package.json
@@ -14,16 +14,21 @@
     "@types/react": "18.2.20",
     "@types/react-dom": "18.2.7",
     "autoprefixer": "10.4.15",
+    "axios": "^1.5.0",
     "eslint": "8.47.0",
     "eslint-config-next": "13.4.19",
     "firebase": "^10.2.0",
     "firebase-admin": "^11.10.1",
+    "leaflet-easybutton": "^2.4.0",
+    "leaflet-geosearch": "^3.8.0",
     "next": "13.4.19",
     "next-auth": "^4.23.1",
     "postcss": "8.4.28",
     "react": "18.2.0",
+    "react-axios": "^2.0.6",
     "react-dom": "18.2.0",
     "react-icons": "^4.10.1",
+    "react-leaflet": "^4.2.1",
     "tailwindcss": "3.3.3",
     "typescript": "5.1.6"
   }
