--- a/package.json
+++ b/package.json
@@ -10,6 +10,7 @@
   },
   "dependencies": {
     "@auth/firebase-adapter": "^1.0.0",
+    "@reduxjs/toolkit": "^1.9.5",
     "@types/node": "20.5.1",
     "@types/react": "18.2.20",
     "@types/react-dom": "18.2.7",
@@ -25,10 +26,10 @@
     "next-auth": "^4.23.1",
     "postcss": "8.4.28",
     "react": "18.2.0",
-    "react-axios": "^2.0.6",
     "react-dom": "18.2.0",
     "react-icons": "^4.10.1",
     "react-leaflet": "^4.2.1",
+    "react-redux": "^8.1.2",
     "tailwindcss": "3.3.3",
     "typescript": "5.1.6"
   }
