--- a/package.json
+++ b/package.json
@@ -29,7 +29,7 @@
     "react-dom": "18.2.0",
     "react-icons": "^4.10.1",
     "react-leaflet": "^4.2.1",
-    "react-redux": "^8.1.2",
+    "react-redux": "^8.0.0-beta.1",
     "tailwindcss": "3.3.3",
     "typescript": "5.1.6"
   }
