--- a/package.json
+++ b/package.json
@@ -10,6 +10,7 @@
   },
   "dependencies": {
     "@auth/firebase-adapter": "^1.0.0",
+    "@mapbox/leaflet-pip": "^1.1.0",
     "@reduxjs/toolkit": "^1.9.5",
     "@types/node": "20.5.1",
     "@types/react": "18.2.20",
@@ -24,6 +25,7 @@
     "leaflet-geosearch": "^3.8.0",
     "next": "13.4.19",
     "next-auth": "^4.23.1",
+    "point-in-polygon": "^1.1.0",
     "postcss": "8.4.28",
     "react": "18.2.0",
     "react-dom": "18.2.0",
